MAIN: fixes alignment of profile pics

--- a/src/app/shared/components/interface-picker/interface-picker.component.scss
+++ b/src/app/shared/components/interface-picker/interface-picker.component.scss
@@ -59,6 +59,11 @@
       justify-content: space-around;
 
       .profile {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
         img {
           height: 150px;
           width: 150px;
